2006-12-19  Thomas Keller  <me@thomaskeller.biz>

	* monotone.texi: added missing documentation for
	automate get_option

2006-12-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/main.cc: Disable the C runtime's built-in globbing.  This
	piece of magic causes more trouble and UI inconsistency than it
	seems to solve.

2006-12-18  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Wrap the add,
	drop and commit calls in a try block so the temporary
	bookkeeping directory can be properly cleared even when
	there's an exception.
	* tests/import/__driver__.lua: Add a test

2006-12-18  Christof Petig <christof.petig@arcor.de>

	* basic_io.hh (peek): use widen to distinguish '\xff' and EOF
	* basic_io.cc (binary_transparency): add an unit test for this

2006-12-18  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc (database::load),
	schema_migration.cc (migrator::migrate):
	PerformanceWork/SQLiteAnalyzeDiscussion in the wiki makes a strong
	argument that ANALYZE provides no benefit for our use profile.
	Remove ANALYZE calls from the post-load and post-migrate code.

	* win32/monotone.iss: Don't ask the user a bunch of questions
	about repositories, keys, branches, and workspaces at a point
	where they might not know the answers.  Based on feedback from new
	users on Win32, a simpler installer UI with an option to read the
	documentation after the install is the way to go.

2006-12-18  Matt Johnston  <matt@ucc.asn.au>

	* botan/: Update to Botan 1.6.0, add botan/README.botan-monotone
	with maintainence details.

2006-12-18  Matt Johnston  <matt@ucc.asn.au>

	* work.cc (get_revision_id): check that the workspace revision
	exists here (so that codepaths such as "log" will also hit it).

2006-12-16  Joel Rosdahl  <joel@rosdahl.net>

	* po/sv.po: Corrections of Swedish translation.

2006-12-16  Matt Johnston  <matt@ucc.asn.au>

	* cmd_list.cc: ls_known, ls_changed: sort path output.

2006-12-15  Nathaniel Smith  <njs@pobox.com>
