@@ -1,3 +1,12 @@
+2006-12-22  Derek Scherger  <derek@echologic.com>
+
+	* cmd_list.cc (ls):
+	* cmd_ws_commit.cc (mv,co): add semi's to ALIASes so indent-region works
+	(pivot_root): tweak indentation
+	(add,drop): use args_to_paths and new split_paths function
+	* paths.{cc,hh} (split_paths): new function to split a vector of
+	file_paths into a set of split_paths
+
 2006-12-19  Thomas Keller  <me@thomaskeller.biz>
 
 	* monotone.texi: added missing documentation for
